--- a/app/src/main/res/layout/fragment_budaya.xml
+++ b/app/src/main/res/layout/fragment_budaya.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     tools:context=".budaya.view.BudayaFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:paddingTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent">
@@ -38,7 +39,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tl_product"
+            android:id="@+id/tl_budaya"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="16dp"
@@ -60,7 +61,7 @@
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/vp_product"
+            android:id="@+id/vp_budaya"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
