--- a/app/src/main/res/layout/activity_tambah_budaya.xml
+++ b/app/src/main/res/layout/activity_tambah_budaya.xml
@@ -84,6 +84,7 @@
                 android:textColor="@color/black"
                 android:gravity="center"
                 android:text="Upload Gambar"
+                android:onClick="onUploadGambarClick"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture" />
@@ -116,6 +117,7 @@
                     android:id="@+id/etNama"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:textColor="@color/black"
                     tools:ignore="VisualLintTextFieldSize" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -172,7 +174,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etDeskripsi"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     tools:ignore="VisualLintTextFieldSize" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -203,7 +206,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etMaps"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     tools:ignore="VisualLintTextFieldSize" />
             </com.google.android.material.textfield.TextInputLayout>
 
