--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -113,6 +113,7 @@
                 android:id="@+id/btn_budaya"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:textColor="@color/white"
                 android:background="@drawable/background_item"
                 android:text="Tambah Budaya"/>
 
@@ -121,6 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_marginVertical="10dp"
                 android:layout_height="50dp"
+                android:textColor="@color/white"
                 android:src="@drawable/background_item"
                 android:text="Tambah Masakan"/>
 
@@ -165,6 +167,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:textColor="@color/black"
                 android:fontFamily="sans-serif-medium"
                 android:text="Resep Masakan Sumatera Utara"
                 android:textSize="12dp" />
@@ -201,6 +204,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:textColor="@color/black"
                 android:text="@string/tvbudaya"
                 android:textSize="12dp" />
 
