--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -142,6 +142,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:textColor="@color/black"
                 android:text="@string/tvbudaya"
                 android:textSize="12dp" />
 
@@ -150,6 +151,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:textColor="@color/black"
                 android:fontFamily="sans-serif-medium"
                 android:text="Resep Masakan Sumatera Utara"
                 android:textSize="12dp" />
@@ -185,6 +187,7 @@
                 android:id="@+id/tvmakanan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:gravity="center"
                 android:text="@string/tvbudaya"
                 android:textSize="12dp" />
