--- a/app/src/main/res/layout/activity_detail_resep.xml
+++ b/app/src/main/res/layout/activity_detail_resep.xml
@@ -37,6 +37,29 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+<!--            <ImageView-->
+<!--                android:id="@+id/ic_edit"-->
+<!--                android:layout_width="14dp"-->
+<!--                android:layout_height="14dp"-->
+<!--                android:layout_marginTop="6dp"-->
+<!--                android:layout_marginEnd="20dp"-->
+<!--                android:elevation="10dp"-->
+<!--                android:src="@drawable/pencil_02"-->
+<!--                app:layout_constraintEnd_toStartOf="@+id/ic_delete"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/ic_delete"-->
+<!--                android:layout_width="14dp"-->
+<!--                android:layout_height="14dp"-->
+<!--                android:layout_marginStart="16dp"-->
+<!--                android:layout_marginEnd="24dp"-->
+<!--                android:layout_marginTop="6dp"-->
+<!--                android:elevation="10dp"-->
+<!--                android:src="@drawable/trash_01"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
+
             <TextView
                 android:id="@+id/tv_nama_makanan"
                 android:layout_width="wrap_content"
