--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -15,19 +15,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/Signin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:paddingHorizontal="8dp"
-            android:paddingVertical="5dp"
-            android:text="@string/app_name"
-            android:textColor="@color/white"
-            android:textSize="16dp"
-            android:onClick="navigateToSignIn"
-            android:fontFamily="sans-serif-medium" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/Signin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="8dp"
+                android:paddingVertical="5dp"
+                android:layout_marginStart="16dp"
+                android:text="@string/app_name"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:fontFamily="sans-serif-medium"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_logout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -192,6 +209,115 @@
                 android:text="@string/tvbudaya"
                 android:textSize="12dp" />
 
+            <LinearLayout
+                android:id="@+id/sc_dashboard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_dashboard"
+                android:orientation="vertical"
+                android:paddingTop="16dp"
+                android:paddingHorizontal="16dp">
+
+<!--                <Button-->
+<!--                    android:id="@+id/btn_budaya"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:background="@drawable/background_item"-->
+<!--                    android:text="Tambah Budaya"/>-->
+
+<!--                <Button-->
+<!--                    android:id="@+id/btn_masakan"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_marginVertical="10dp"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:src="@drawable/background_item"-->
+<!--                    android:text="Tambah Masakan"/>-->
+
+                <LinearLayout
+                    android:id="@+id/ly_budaya"
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:paddingHorizontal="20dp">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginHorizontal="10dp"
+                        android:src="@drawable/budaya" />
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginHorizontal="15dp"
+                        android:src="@drawable/budaya2" />
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginHorizontal="10dp"
+                        android:src="@drawable/budaya3" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tvbudaya"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/tvbudaya"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/tv_resep"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/black"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Resep Masakan Sumatera Utara"
+                    android:textSize="12dp" />
+
+                <LinearLayout
+                    android:id="@+id/ly_resep"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:src="@drawable/makanan" />
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:src="@drawable/makanan2" />
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:src="@drawable/makanan3" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tvmakanan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:text="@string/tvbudaya"
+                    android:textSize="12dp" />
+
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
